--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nike Fake</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,13 +14,35 @@
         <img src="imagens/nike.png" id="logo">
         <span id="textos">
         <p>MAN</p>
+      
 <p>WOMAN</p>
 <p>KIDS</p>
 <p>COLECTION</p>
+
 </span>
     </header>
+    <span id="menu">
+        <h1>Fit</h1>
+        <p>Lego</p>
+        <p>Lego</p>
+        <p>Lego</p>
+        <p>Lego</p>
+    </span>
+  
     <div id="topo">
     <img id="img-cima"src="imagens/teniss.png">
+    <p id="nike-text">NIKE AIR</p>
+    <p id="nike-textli">NIKE AIR</p>
+    <div id="circulo">
+        <p></p>
+    </div>
+</div>
+<div id="middle">
+    <h1>CORREDORES RETRÔ</h1>
+    <p>Enraizado na corrida,remasterizado para o estilo.Esta coleção de sapatos retrô está de volta com mais cores,acabamentos
+    e arestas</p>
+    <button id="comprar">Comprar</button>
+
 </div>
    <script src="script.js"></script>
 </body>
