--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <img src="imagens/nike.png" id="logo">
         <span id="textos">
         <p id="fita">MAN</p>
+            <p>Olá</p>
       
 <p>WOMAN</p>
 <p>KIDS</p>
